--- a/backend/api/lexical/search/templates/search/api.html
+++ b/backend/api/lexical/search/templates/search/api.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <title>API DOCS</title>
+        <title>Quranic Lexical Search API</title>
         <link href="/../static/css/style.css" rel="stylesheet">
         <link href="/../static/img/quran.png" rel="icon" type="image/png" >
     </head>
@@ -10,7 +10,7 @@
         <div class="container">
             <div class="row">
                 <a href="/">http://localhost:8000/</a>
-                <p>This homepage of API DOCS.</p>
+                <p>This homepage of Quranic Lexical Search API DOCS.</p>
             </div>
 
             <div class="row">
